make scripts executable when saving

--- a/emacs.org
+++ b/emacs.org
@@ -1340,6 +1340,13 @@ The following will control [[https://www.gnu.org/software/emacs/manual/html_node
   (setq auto-save-interval 1000)
 #+END_SRC
 
+On Emacs 21 or later, you can instruct Emacs to make the script
+executable when saving.
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'after-save-hook 'executable-make-buffer-executable-if-script-p)
+#+END_SRC
+
 With Emacs 24.4, the following will allow you to use the
 _focus-out-hook_ for different things.  My preference here is to
 instruct Emacs to save buffers.
