--- a/emacs.org
+++ b/emacs.org
@@ -415,6 +415,7 @@ The following does lots of things:
                                  ("t" "To do" entry (file+headline (concat org-directory "/todo.org") "Tasks")
                                    "* TODO [#A] %?\nSCHEDULED: %(org-insert-time-stamp (org-read-date nil t \"+0d\"))\n%a\n")
                                  )
+        org-export-allow-bind-keywords t
         org-file-apps (quote ((auto-mode . emacs)
                                ("\\.doc\\'" . "ooffice %s")
                                ("\\.docx\\'" . "ooffice %s")
