clean up installed themes

--- a/emacs.org
+++ b/emacs.org
@@ -1411,13 +1411,14 @@ More about Emacs themes can be read in the manual on [[https://www.gnu.org/softw
 This defines the default theme, which is then loaded below.
 
 #+BEGIN_SRC emacs-lisp
-  (dolist (p '(gruvbox-theme leuven-theme material-theme
-               naquadah-theme solarized-theme
-               color-theme-sanityinc-tomorrow
-               spacegray-theme ample-theme
-               professional-theme material-theme))
-    (progn (sf/package-install p)))
-   (defvar sf/gui-theme 'material "Preferred graphics theme") 
+   (dolist (p '(leuven-theme
+                 material-theme
+                 solarized-theme
+                 spacemacs-theme
+                 zenburn-theme
+                 professional-theme))
+     (progn (sf/package-install p)))
+    (defvar sf/gui-theme 'material "Preferred graphics theme") 
 #+END_SRC
 
 More information about themes can be found at EmacsWiki:
